--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
 {% block content %}
 <div class="container" style="text-align: center;">
     <div class="login">
-        <p class="subtitle">Test Your Musical Knowledge.</p>
+        <p class="subtitle is-4">Test Your Musical Knowledge.</p>
 
-        <a href="/login"><button class="button is-success is-light">Login with Spotify</button></a>
+        <a href="/login"><button class="button is-success is-light is-large">Login with Spotify</button></a>
     </div>
 </div>  
 {% endblock %}
