--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container"  style="text-align:center; max-width: 320px;">
-    <p class="subtitle">Results:</p>
+    <p class="title is-4">Results for "{{search}}":</p>
     {% for artist in artists %}
     
     <div class="card">
